--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "npm-run-all": "^4.1.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "recharts": "^1.8.5"
   },
   "scripts": {
-    
     "build-css": "node-sass-chokidar src/styles/sass -o src/styles/css",
     "watch-css": "npm run build-css && node-sass-chokidar src/styles/sass -o src/styles/css --watch --recursive --usePolling",
     "start-js": "react-scripts start",
